--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohan's personal site</title>
 </head>
-<body>
+<body style="background-color: #DBDFFD;">
     <table cellspacing="20" >
         <tr>
             <td>
-                <img src="images/rohan dp.png" alt="rohan profile picture" height="250" width="250">
+                <img src="images/rohan.png" alt="rohan profile picture" height="250" width="250">
             </td>
             <td>
                 <h1>Rohan Nandan</h1>
