--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohan's personal site</title>
+   <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="background-color: #DBDFFD;">
+<body >
     <table cellspacing="20" >
         <tr>
             <td>
@@ -31,7 +32,12 @@
         <li>BTECH(CSE) - PES University </li>
     </ul>
     <hr>
-    <a href="hobbies.html">My hobbies</a>
+    <h3>Hobbies</h3>
+    <ol>
+        <li>Badminton</li>
+        <li>Exploring the cosmos</li>
+        <li>Cricket</li>
+    </ol>
     <hr>
     <h3>Skills</h3>
     <table cellspacing="20">
