--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing="20" >
         <tr>
             <td>
-                <img src="images/rohan.png" alt="rohan profile picture" height="250" width="250">
+                <img src="images/Rohan.png" alt="rohan profile picture" height="250" width="250">
             </td>
             <td>
                 <h1>Rohan Nandan</h1>
